# MLops-zoomcamp

./: .gitignore  pyproject.toml
01-intro/: pyproject.toml
01-intro/src/01_intro/: __init__.py  duration-prediction.ipynb
01-intro/src/01_intro/homework/: homework_1.ipynb
02-experiment-tracking/: pyproject.toml
02-experiment-tracking/src/02-experiment-tracking/: __init__.py  duration-prediction.ipynb  hpo.py  mlflow.db  register_model.py  train.py
02-experiment-tracking/src/02-experiment-tracking/mlartifacts/5/32436ee335c44392a16e266fc82bf5d1/artifacts/: estimator.html
02-experiment-tracking/src/02-experiment-tracking/mlartifacts/5/32436ee335c44392a16e266fc82bf5d1/artifacts/model/: MLmodel
02-experiment-tracking/src/02-experiment-tracking/mlartifacts/5/51f68ffe6e574fcc95c1081a15f10acc/artifacts/: estimator.html
02-experiment-tracking/src/02-experiment-tracking/mlartifacts/5/55d72ae530f24614a1bcda1189499f14/artifacts/: estimator.html
02-experiment-tracking/src/02-experiment-tracking/mlartifacts/5/6cd99380e7664f9cba4fb191769865c0/artifacts/: estimator.html
03-orchestation/mlops/: docker-compose.yml
03-orchestation/mlops/mlops/homework_3/data_exporters/: save.py
03-orchestation/mlops/mlops/homework_3/pipelines/homework_03_pipeline/: metadata.yaml
03-orchestation/mlops/mlops/homework_3/transformers/: transform.py
04-deployment/mlops-deploy/: Dockerfile  homework.dockerfile
04-deployment/mlops-deploy/batch/: homework.ipynb
05-monitoring/: homework05.ipynb
(+5 files in other folders)
