[project]
name = "ml-zoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hyperopt>=0.2.7",
    "ipykernel>=6.29.5",
    "mlflow>=2.22.0",
    "pytest>=8.3.5",
    "seaborn>=0.13.2",
    "xgboost>=3.0.1",
]

[tool.uv.workspace]
members = ["01-intro", "02-experiment-tracking"]
